Lab 4 Deploying_E-commerce_Application/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: <aws_account_id>.dkr.ecr.ap-south-1.amazonaws.com/ecommerce-frontend:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "25m"  
          limits:
            cpu: "50m"
