Lab 4 Deploying_E-commerce_Application/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  type: ClusterIP
  ports:
  - port: 5001
    targetPort: 5001
  selector:
    app: cart
