Lab 4 Deploying_E-commerce_Application/ecommerce-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/catalog/(.*)
        pathType: Prefix
        backend:
          service:
            name: catalog-service
            port:
              number: 5000
      - path: /api/cart/(.*)
        pathType: Prefix
        backend:
          service:
            name: cart-service
            port:
              number: 5001
